Add global maven goal presets
 - add mvnw updater and a few maveniverse toolbox diagnostic
   goals as global preset
 - add right click menu action which leads directly to the global
   rule editor for easy add/edit/remove, right next to the project
   specific rule editor
 - some layout adjustments to both global and custom goal windows so
   that they resize nicely
 - minor language level cleanup